@@ -38,7 +38,7 @@ struct dsc_mapping_info {
 #define FAST_POW_TWO(x) (1 << (x))
 #define CALC_SYM_CAPACITY(x) (sizeof(struct sym *) * FAST_POW_TWO(x))
 #define CALC_ENTRIES_CAPACITY(x) (sizeof(struct lc_fxn_starts_entry *) * FAST_POW_TWO(x))
-#define CALC_NLISTS_ARR_CAPACITY(x) (sizeof(struct nlist_64_wrapper) * FAST_POW_TWO(x))
+#define CALC_NLISTS_ARR_CAPACITY(x) (sizeof(struct nlist_64_wrapper *) * FAST_POW_TWO(x))
 #define CALC_DSC_LOCAL_SYM_ENTRIES_ARR_CAPACITY(x) \
     (sizeof(struct dsc_local_symentry_wrapper *) * FAST_POW_TWO(x))
 
@@ -91,6 +91,7 @@ enum {
 
 void add_symbol_to_entry(struct dbg_sym_entry *, int, unsigned long,
         unsigned int, int, char *);
+void create_frame_string(unsigned long, char **);
 struct dbg_sym_entry *create_sym_entry(unsigned long, unsigned long, int);
 void destroy_all_symbol_entries(void);
 int get_symbol_info_from_address(struct linkedlist *, unsigned long, char **,
