@@ -1,3 +1,7 @@
+9-23-19
+- symbolicated disassembly
+- better thread list output
+
 9-19-19
 - unnamed symbols are successfully resolved, at this point, symbol support
 seems to be stable
